name:                haskell-book
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Working out problems from Haskell Book
homepage:            http://github.com/balajisivaraman/haskell-book
license:             MIT
license-file:        LICENSE
author:              Balaji Sivaraman
maintainer:          balaji@balajisivaraman.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-book-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-book
  default-language:    Haskell2010

test-suite haskell-book-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-book
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/balajisivaraman/haskell-book
